deploymentservicedev.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: washbin-site-dev
  labels:
    app: washbinsite-dev
spec:
  replicas: 2
  selector:
    matchLabels:
      app: washbinsite-dev
  template:
    metadata:
      labels:
        app: washbinsite-dev
    spec:
      containers:
      - name: washbin
        imagePullPolicy: Always
        image: shettymanish01/testsite:latest
        ports:
        - containerPort: 5000


---
apiVersion: v1
kind: Service
metadata:
  name: washbin-service
spec:
  type: NodePort
  selector:
    app: washbinsite-dev
  ports:
    - protocol: TCP
      port: 90
      targetPort: 5000
      nodePort: 31000
