deploymentserviceprod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: washbin-site-prod
  labels:
    app: washbinsite-prod
spec:
  replicas: 2
  selector:
    matchLabels:
      app: washbinsite-prod
  template:
    metadata:
      labels:
        app: washbinsite-prod
    spec:
      containers:
      - name: washbin
        imagePullPolicy: Always
        image: shettymanish01/testsite:latest
        ports:
        - containerPort: 5000


---
apiVersion: v1
kind: Service
metadata:
  name: washbin-service-prod
spec:
  type: NodePort
  selector:
    app: washbinsite-prod
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
