ingressdeploymentdev.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: washbin-ingress-prod
  namespace: dev
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: dev.washbin.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: washbin-service-dev
                port:
                  number: 80
          # - path: /dev
          #   pathType: Prefix
          #   backend:
          #     service:
          #       name: washbin-service-dev
          #       port:
          #         number: 80
