ingressdeploymentprod.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: washbin-ingress-prod
  namespace: prod
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: washbin.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: washbin-service-prod
                port:
                  number: 80
          # - path: /dev
          #   pathType: Prefix
          #   backend:
          #     service:
          #       name: washbin-service-dev
          #       port:
          #         number: 80
